--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,13 +5,13 @@ site_author: Sean Hickey
 theme: readthedocs
 pages:
 - [index.md, Home]
-- [overview.md, Overview]
-- [settings.md, Settings Overview]
-- [user_agents.md, User Agent Settings]
-- [downloading.md, Downloading Pages]
+- [overview.md, User Guide, Overview]
+- [settings.md, User Guide, Settings Overview]
+- [user_agents.md, User Guide, User Agent Settings]
+- [downloading.md, User Guide, Downloading Pages]
+- [api/packages/surf.md, Packages, surf]
+- [api/packages/browser.md, Packages, browser]
+- [api/packages/agent.md, Packages, agent]
+- [api/packages/jar.md, Packages, jar]
+- [api/packages/util.md, Packages, util]
 - [credits.md, Credits]
-- [api/surf.md, API, surf]
-- [api/browser.md, API, browser]
-- [api/agent.md, API, agent]
-- [api/jar.md, API, jar]
-- [api/util.md, API, util]
