--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,9 @@ site_author: Sean Hickey
 theme: readthedocs
 pages:
 - [index.md, Home]
-- [overview.md, User Guide, Overview]
-- [settings.md, User Guide, Settings Overview]
-- [user_agents.md, User Guide, User Agent Settings]
+- [overview.md, User Guide, Quick Start]
+- [settings.md, User Guide, Settings]
+- [user_agents.md, User Guide, User Agents]
 - [downloading.md, User Guide, Downloading Pages]
 - [api/packages/surf.md, Packages, surf]
 - [api/packages/browser.md, Packages, browser]
