--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_author: Sean Hickey
 theme: readthedocs
 pages:
 - [index.md, Home]
-- [quick_start.md, User Guide, Quick Start]
+- [overview.md, User Guide, Overview]
 - [settings.md, User Guide, Settings]
 - [user_agents.md, User Guide, User Agents]
 - [api/packages/surf.md, Packages, surf]
