--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,17 @@
-site_name: Surf
-repo_url: https://github.com/headzoo/surf
-site_description: Stateful programmatic web browsing in Go.
-site_author: Sean Hickey
-theme: readthedocs
+site_name: "Surf"
+repo_url: "https://github.com/headzoo/surf"
+site_description: "Stateful programmatic web browsing in Go."
+site_author: "Sean Hickey"
+copyright: "2015, Sean Hickey"
+theme: "readthedocs"
 pages:
-- [index.md, Home]
-- [overview.md, User Guide, Overview]
-- [settings.md, User Guide, Settings]
-- [user_agents.md, User Guide, User Agents]
-- [api/packages/surf.md, Packages, surf]
-- [api/packages/browser.md, Packages, browser]
-- [api/packages/agent.md, Packages, agent]
-- [api/packages/jar.md, Packages, jar]
-- [api/packages/util.md, Packages, util]
-- [about/credits.md, About, Credits]
+- ["index.md", "Home"]
+- ["overview.md", "User Guide", "Overview"]
+- ["settings.md", "User Guide", "Settings"]
+- ["user_agents.md", "User Guide", "User Agents"]
+- ["api/packages/surf.md", "Packages", "surf"]
+- ["api/packages/browser.md", "Packages", "browser"]
+- ["api/packages/agent.md", "Packages", "agent"]
+- ["api/packages/jar.md", "Packages", "jar"]
+- ["api/packages/util.md", "Packages", "util"]
+- ["about/credits.md", "About", "Credits"]
