--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,4 @@
-site_name: "Surf"
-site_description: "Stateful programmatic web browsing in Go."
+site_name: "Surf - Stateful programmatic web browsing in Go"
 repo_url: "https://github.com/headzoo/surf"
 site_author: "Sean Hickey"
 copyright: "2015, Sean Hickey"
