--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,8 @@ pages:
 - ["index.md", "Home"]
 - ["overview.md", "User Guide", "Overview"]
 - ["settings.md", "User Guide", "Settings"]
-- ["debugging.md", "Debugging", "Overview"]
 - ["user_agents.md", "User Guide", "User Agents"]
+- ["debugging.md", "User Guide", "Debugging"]
 - ["api/packages/surf.md", "Packages", "surf"]
 - ["api/packages/browser.md", "Packages", "browser"]
 - ["api/packages/agent.md", "Packages", "agent"]
